discussion/kv_engine/155140/155140_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Remove implicit creation of the ExecutorPool

Make sure it is explicitly created before it is used. This is
mostly a "test issue" as the memcached core explicitly create
the pool before starting to accept clients (and shut it down
as part of shutdown)

Change-Id: I36786a844de7dea359bf0cb5ecba77b086e96f52

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 20:52:29.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 21:42:24.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9613/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9613/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9613/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36570/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0034/0157]: test access scanner settings.....\kv_engine\engines\ep\tests\ep_testsuite.cc:3351 Test failed: `" (Expected `0", got `-1" - Initial time incorrect, expect: 02:00, actual: 01:59)
(186 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36570/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11189/ : FAILURE

Compile error at [2021-06-08T21:15:23.836Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11189/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11338/ : FAILURE

Compile error at [2021-06-08T21:11:40.885Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11338/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8211/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/156/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31249/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10260/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11609/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19192/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
